# mlops

./: LICENSE  Makefile  README.md  data.dvc  pyproject.toml  requirements.txt
.dvc/: config
docs/: mkdocs.yaml
mlops/: predict_model.py  train_model.py
mlops/data/: make_dataset.py
mlops/models/: model.py
mlops/visualizations/: visualize.py
