[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops"
version = "0.0.1"
description = "daily updates from the real of DTU\u0027s MLOps class, Jan 2024"
authors = [
  { name = "Ferenc Fodor", email = "your@email.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = "~=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["mlops"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
