[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops"
version = "0.0.1"
description = "daily updates from DTU\u0027s MLOps class, Jan 2024"
authors = [
  { name = "Ferenc Fodor", email = "s220356@email.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = "~=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["mlops"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
select = ["I"]
line-length = 120
